# formation-python-initiation

./: .gitignore  _quarto-en.yaml  _quarto-fr.yaml  pyproject.toml
applis_nt/: solutions_meteo.py  solutions_rp.py
applis_nt/rp/: solutions_rp.py
source/manipulation/csv-json-files/: tutorial.qmd
source/manipulation/polars/: tutorial.qmd
source/projects/RP/: solutions.py
source/projects/meteo/: tutorial.qmd
