[project]
name = "formation-python-initiation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastexcel>=0.18.0",
    "geopandas>=1.1.1",
    "plotnine>=0.15.2",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "seaborn>=0.13.2",
    "xlrd>=2.0.2",
]
